[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seo-graph"
version = "0.1.0"
description = "Crawl internal links, build graphs, cluster content, and visualize."
readme = "README.md"
requires-python = ">=3.11"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
